--- a/.github/actions/gh-release/action.yaml
+++ b/.github/actions/gh-release/action.yaml
@@ -15,7 +15,7 @@ inputs:
     description: verify if tag exist
   target-branch:
     required: false
-    default: mai
+    default: main
     description: branch to taget
 
 runs:
