:recycle: reverted main ref [skip ci]

--- a/.github/workflows/MUTATE-PR.yaml
+++ b/.github/workflows/MUTATE-PR.yaml
@@ -6,6 +6,6 @@ on:
       - opened
 jobs:
   update-pr:
-    uses: ixxeL-actions/workflows/.github/workflows/__update-PR-classic__.yaml@v1.3.4
+    uses: ixxeL-actions/workflows/.github/workflows/__update-PR-classic__.yaml@main
     secrets:
       git-token: ${{ secrets.PAT }}
