--- a/.github/workflows/__ci-nodejs__.yaml
+++ b/.github/workflows/__ci-nodejs__.yaml
@@ -150,16 +150,16 @@ jobs:
     steps:
       - name: Pre-clean
         uses: dktunited/.github/actions/cleaner@main
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
       - name: Node.js and pnpm setup
-        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@main
         with:
           node-version: ${{ inputs.node-version }}
           pnpm-version: ${{ inputs.pnpm-version }}
       - name: Linting
         id: pnpm-run-lint
-        uses: ixxeL-actions/workflows/.github/actions/pnpm-run@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/pnpm-run@main
         with:
           workingdir: ${{ inputs.workingdir }}
           script: lint
@@ -172,7 +172,7 @@ jobs:
           failure-threshold: info
       - name: "\U0001F6AB Cancel workflow run"
         if: failure() && inputs.quick-fail == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@main
         with:
           run-id: ${{ github.run_id }}
         env:
@@ -190,18 +190,18 @@ jobs:
     steps:
       - name: Pre-clean
         uses: dktunited/.github/actions/cleaner@main
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Node.js and pnpm setup
-        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@main
         with:
           node-version: ${{ inputs.node-version }}
           pnpm-version: ${{ inputs.pnpm-version }}
       - name: Unit tests
         id: pnpm-run-tests
-        uses: ixxeL-actions/workflows/.github/actions/pnpm-run@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/pnpm-run@main
         with:
           workingdir: ${{ inputs.workingdir }}
           script: "test:coverage"
@@ -229,7 +229,7 @@ jobs:
           process_gcloudignore: false
       - name: "\U0001F6AB Cancel workflow run"
         if: failure() && inputs.quick-fail == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@main
         with:
           run-id: ${{ github.run_id }}
         env:
@@ -247,21 +247,21 @@ jobs:
     steps:
       - name: Pre-clean
         uses: dktunited/.github/actions/cleaner@main
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
       - name: Node.js and pnpm setup
-        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@main
         with:
           node-version: ${{ inputs.node-version }}
           pnpm-version: ${{ inputs.pnpm-version }}
       - name: Playwright setup
-        uses: ixxeL-actions/workflows/.github/actions/setup-playwright@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/setup-playwright@main
         with:
           cache: ${{ inputs.playwright-cache }}
       - name: "Build code (pnpm) \U0001F4E6"
         run: pnpm build
       - name: Generate config file
-        uses: ixxeL-actions/workflows/.github/actions/envsubst@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/envsubst@main
         env:
           ENV: ${{ inputs.environment }}
           FEDID_URL: ${{ vars.FEDID_URL }}
@@ -295,7 +295,7 @@ jobs:
           process_gcloudignore: false
       - name: "\U0001F6AB Cancel workflow run"
         if: failure() && inputs.quick-fail == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@main
         with:
           run-id: ${{ github.run_id }}
         env:
@@ -313,10 +313,10 @@ jobs:
     steps:
       - name: Pre-clean
         uses: dktunited/.github/actions/cleaner@main
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
       - name: Node.js and pnpm setup
-        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/setup-pnpm@main
         with:
           node-version: ${{ inputs.node-version }}
           pnpm-version: ${{ inputs.pnpm-version }}
@@ -336,7 +336,7 @@ jobs:
           service_account: ${{ inputs.service_account }}
       - name: GCloud GAR Authentication
         id: gcloud-gar-auth
-        uses: ixxeL-actions/workflows/.github/actions/gcloud-gar-auth@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gcloud-gar-auth@main
         with:
           registry: ${{ inputs.gcp-base-url }}
       - name: Get branch name
@@ -396,7 +396,7 @@ jobs:
           prisma-pass: ${{ secrets.prisma-pass }}
       - name: "\U0001F6AB Cancel workflow run"
         if: failure() && inputs.quick-fail == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-run-cancel@main
         with:
           run-id: ${{ github.run_id }}
         env:
@@ -416,7 +416,7 @@ jobs:
     steps:
       - name: Pre-clean
         uses: dktunited/.github/actions/cleaner@main
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
       - name: Get branch name
         id: branch-name
@@ -429,12 +429,12 @@ jobs:
           service_account: ${{ inputs.service_account }}
       - name: GCloud GAR Authentication
         id: gcloud-gar-auth
-        uses: ixxeL-actions/workflows/.github/actions/gcloud-gar-auth@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gcloud-gar-auth@main
         with:
           registry: ${{ inputs.gcp-base-url }}
       - name: GCloud add tag
         id: gcloud-add-tag
-        uses: ixxeL-actions/workflows/.github/actions/gcloud-add-tag@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gcloud-add-tag@main
         with:
           image-fullname: ${{ inputs.docker-target-registry }}/${{ inputs.image-name }}
           src-image-tag: sha-${{ github.sha }}
@@ -463,13 +463,13 @@ jobs:
           role: ${{ inputs.vault-role }}
           secrets: |
             ${{ inputs.vault-secret-path }} GHA_PERSONNAL_ADMIN_TOKEN | GHA_PERSONNAL_ADMIN_TOKEN
-      - name: "\U0001F4E5 Checkout code with Vault"
+      - name: 📥 Checkout code with Vault
         uses: actions/checkout@v4
         if: inputs.vault-enabled == true
         with:
           fetch-depth: "0"
           token: ${{ steps.get-secrets.outputs.GHA_PERSONNAL_ADMIN_TOKEN }}
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
         if: inputs.vault-enabled == false
         with:
@@ -477,7 +477,7 @@ jobs:
           token: ${{ secrets.git-admin-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get branch name
@@ -486,7 +486,7 @@ jobs:
       - name: Git tag
         id: git-tag
         if: inputs.gh-release == 'false'
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
         with:
           tag-msg: "CI auto Git tag for ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}"
           tag-value: ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
@@ -496,7 +496,7 @@ jobs:
       - name: GH Release with Vault
         id: gh-release-vault
         if: inputs.vault-enabled && inputs.gh-release == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
         with:
           tag: ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
           verify-tag: false
@@ -506,7 +506,7 @@ jobs:
       - name: GH Release
         id: gh-release
         if: inputs.vault-enabled == false && inputs.gh-release == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
         with:
           tag: ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
           verify-tag: false
@@ -528,7 +528,7 @@ jobs:
     steps:
       - name: Pre-clean
         uses: dktunited/.github/actions/cleaner@main
-      - name: "\U0001F4E5 Checkout code"
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
       - name: ☁️ GCloud auth
         id: auth
@@ -538,11 +538,11 @@ jobs:
           service_account: ${{ inputs.service_account }}
       - name: GCloud GAR Authentication
         id: gcloud-gar-auth
-        uses: ixxeL-actions/workflows/.github/actions/gcloud-gar-auth@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gcloud-gar-auth@main
         with:
           registry: ${{ inputs.gcp-base-url }}
       - name: Delete image from GAR
         id: gcloud-delete-img
-        uses: ixxeL-actions/workflows/.github/actions/gcloud-delete-img@v1.3.4
+        uses: ixxeL-actions/workflows/.github/actions/gcloud-delete-img@main
         with:
           docker-img: ${{ inputs.docker-target-registry }}/${{ inputs.image-name }}:sha-${{ github.sha }}
