--- a/.github/workflows/PRE-COMMIT.yaml
+++ b/.github/workflows/PRE-COMMIT.yaml
@@ -9,4 +9,4 @@ on:
       - "main"
 jobs:
   check-gha-templates:
-    uses: ixxeL-actions/workflows/.github/workflows/__check-gha-templates__.yaml@v1.3.5
+    uses: ixxeL-actions/workflows/.github/workflows/__check-gha-templates__.yaml@main
