--- a/.github/workflows/__update-PR__.yaml
+++ b/.github/workflows/__update-PR__.yaml
@@ -43,25 +43,25 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        uses: ixxeL-actions/workflows/.github/actions/git-config@v2.0.0
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get component name
         id: get-component-name
-        uses: ixxeL-actions/workflows/.github/actions/dynamic-fetch-component@main
+        uses: ixxeL-actions/workflows/.github/actions/dynamic-fetch-component@v2.0.0
         with:
           component-path-position: ${{ inputs.component-path-position }}
         env:
           GH_TOKEN: ${{ github.token }}
       - name: Get last tag
         id: get-last-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@v2.0.0
         with:
           pattern: "*-[0-9]*.[0-9]*.[0-9]*"
           git-workdir: ${{ inputs.workingdir }}
       - name: Update PR title
         id: update-pr-title
-        uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@main
+        uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@v2.0.0
         with:
           pattern: "${{ github.event.pull_request.head.ref }}-(${{ steps.get-component-name.outputs.COMPONENT_NAME }})"
         env:
