--- a/.github/workflows/ci-gradle.yaml
+++ b/.github/workflows/ci-gradle.yaml
@@ -99,7 +99,7 @@ jobs:
     concurrency:
       group: "${{ github.workflow }}-${{ github.ref }}"
       cancel-in-progress: true
-    uses: ixxeL-actions/workflows/.github/workflows/__ci-gradle__.yaml@main
+    uses: ixxeL-actions/workflows/.github/workflows/__ci-gradle__.yaml@v2.0.0
     with:
       workingdir: ${{ inputs.workingdir }}
       workload_identity_provider: ${{ inputs.workload_identity_provider }}
