--- a/.github/workflows/__auto-tag__.yaml
+++ b/.github/workflows/__auto-tag__.yaml
@@ -59,7 +59,7 @@ on:
         type: string
 jobs:
   auto-tag-repo:
-    name: auto-tag-repo
+    name: "\U0001F680 Release"
     timeout-minutes: 5
     runs-on: ${{ inputs.runs-on }}
     # permissions:
@@ -90,7 +90,7 @@ jobs:
         uses: ixxeL-actions/workflows/.github/actions/detect-bump@main
         with:
           release-regex: '\s*:package: CI release version ${{ steps.get-last-tag.outputs.LAST_TAG }}.+'
-          minor-regex: ^(feat(/|:).+)$
+          minor-regex: ^(feat/.+)$
           major-regex: ^((((feat|fix|chore|docs|perf|refactor|build|ci|revert|style|test)!)|(!(feat|fix|chore|docs|perf|refactor|build|ci|revert|style|test)))/.+)$
       - name: Bump version
         id: bump-version
