--- a/.github/workflows/__helm-build__.yaml
+++ b/.github/workflows/__helm-build__.yaml
@@ -219,12 +219,12 @@ jobs:
           fetch-depth: "0"
       - name: Helm linting
         id: helm-lint
-        uses: ixxeL-actions/workflows/.github/actions/helm-lint@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-lint@main
         with:
           workingdir: ${{ inputs.workingdir }}
       - name: Detect bump
         id: detect-bump
-        uses: ixxeL-actions/workflows/.github/actions/detect-bump@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/detect-bump@main
         with:
           release-regex: '\s*:package: CI release of helm chart ${{ env.COMPONENT_NAME }}.+'
           minor-regex: ^(feat(\/|-)[[:alnum:]_.-]+-\(${{ env.COMPONENT_NAME }}\).*)$
@@ -232,14 +232,14 @@ jobs:
           searching-deepness: 20
       - name: Bump version
         id: bump-version
-        uses: ixxeL-actions/workflows/.github/actions/bump-version@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/bump-version@main
         with:
           update: ${{ inputs.auto-update-chart }}
           increment: ${{ steps.detect-bump.outputs.BUMP_KIND }}
           current-version: ${{ steps.helm-lint.outputs.CHART_VERSION }}
       - name: Helm Checkov scan
         id: helm-checkov
-        uses: ixxeL-actions/workflows/.github/actions/checkov@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/checkov@main
         with:
           workingdir: ${{ inputs.workingdir }}
           artefact: ${{ inputs.checkov-artefact }}
@@ -256,14 +256,14 @@ jobs:
           framework: ${{ inputs.checkov-framework }}
       - name: Helm Unit testing
         id: helm-unittest
-        uses: ixxeL-actions/workflows/.github/actions/helm-unittest@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-unittest@main
         with:
           workingdir: ${{ inputs.workingdir }}
           with-subchart: ${{ inputs.helm-with-subchart }}
           tests-dir: ${{ inputs.helm-tests-dir }}
       - name: Helm Templating
         id: helm-template
-        uses: ixxeL-actions/workflows/.github/actions/helm-template@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-template@main
         with:
           workingdir: ${{ inputs.workingdir }}
           strict: ${{ inputs.helm-strict }}
@@ -276,14 +276,14 @@ jobs:
           output-file: ${{ inputs.helm-output-file }}
       - name: Helm Kubeconform
         id: helm-kubeconform
-        uses: ixxeL-actions/workflows/.github/actions/helm-kubeconform@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-kubeconform@main
         with:
           workingdir: ${{ inputs.workingdir }}
           values-file: ${{ inputs.helm-values-file-test }}
           plugin-version: ${{ inputs.helm-kubeconform-version }}
       - name: Helm Packaging
         id: helm-package
-        uses: ixxeL-actions/workflows/.github/actions/helm-package@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-package@main
         with:
           workingdir: ${{ inputs.workingdir }}
           chart-name: ${{ steps.helm-lint.outputs.CHART_NAME }}
@@ -293,7 +293,7 @@ jobs:
       - name: Helm pushing
         id: helm-push
         if: inputs.release
-        uses: ixxeL-actions/workflows/.github/actions/helm-push@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-push@main
         with:
           workingdir: ${{ inputs.workingdir }}
           chart-name: ${{ steps.helm-lint.outputs.CHART_NAME }}
@@ -311,7 +311,7 @@ jobs:
       - name: Chart update
         id: chart-update
         if: (inputs.auto-update-chart == 'true') && (inputs.release)
-        uses: ixxeL-actions/workflows/.github/actions/chart-update@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/chart-update@main
         with:
           workingdir: ${{ inputs.workingdir }}
           evaluate-update: ${{ inputs.evaluate-update }}
@@ -319,36 +319,36 @@ jobs:
       - name: Helm docs
         id: helm-docs
         if: (inputs.auto-update-chart == 'true') && (inputs.release)
-        uses: ixxeL-actions/workflows/.github/actions/helm-docs@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/helm-docs@main
         with:
           chart-search-root: ${{ inputs.workingdir }}
       - name: Git config
         id: git-config
         if: (inputs.auto-update-chart == 'true') && (inputs.release)
-        uses: ixxeL-actions/workflows/.github/actions/git-config@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
           git-workdir: ${{ inputs.git-workdir }}
       - name: Update changelog
         id: changelog
         if: (inputs.auto-update-chart == 'true') && (inputs.release)
-        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@main
         with:
           workingdir: ${{ inputs.workingdir }}
           release-name: ${{ steps.bump-version.outputs.VERSION }}
       - name: Git push
         id: git-push
         if: (inputs.auto-update-chart == 'true') && (inputs.release)
-        uses: ixxeL-actions/workflows/.github/actions/git-push@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
           git-token: ${{ secrets.PAT }}
           git-msg: ":package: CI release of helm chart ${{ env.COMPONENT_NAME }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]"
           git-workdir: ${{ inputs.git-workdir }}
           git-staging-dir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
-      - name: "\U0001F680 GH Release"
+      - name: 🚀 GH Release
         id: gh-release
         if: (inputs.auto-tag-repo == 'true') && (inputs.auto-update-chart == 'true') && (inputs.release)
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
         with:
           tag: ${{ env.COMPONENT_NAME }}-${{ steps.bump-version.outputs.VERSION }}
           verify-tag: ${{ inputs.release-verify-tag }}
