--- a/.github/workflows/__release__.yaml
+++ b/.github/workflows/__release__.yaml
@@ -108,6 +108,7 @@ on:
         required: false
         default: whbox-tools/data/gh-actions
         type: string
+
 jobs:
   promote-and-tag:
     name: promote-and-tag
@@ -151,13 +152,13 @@ jobs:
           node-version: ${{ inputs.node-version }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
           git-workdir: ${{ inputs.git-workdir }}
       - name: Release version with Vault
         id: release-it-vault
         if: inputs.vault-enabled == true
-        uses: ixxeL-actions/workflows/.github/actions/release-it@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/release-it@main
         with:
           increment-type: ${{ inputs.increment-type }}
           git-tag: ${{ inputs.git-tag }}
@@ -176,7 +177,7 @@ jobs:
       - name: Release version
         id: release-it
         if: inputs.vault-enabled == false
-        uses: ixxeL-actions/workflows/.github/actions/release-it@v2.0.1
+        uses: ixxeL-actions/workflows/.github/actions/release-it@main
         with:
           increment-type: ${{ inputs.increment-type }}
           git-tag: ${{ inputs.git-tag }}
