--- a/.github/actions/git-get-last-tag/action.yaml
+++ b/.github/actions/git-get-last-tag/action.yaml
@@ -13,7 +13,7 @@ inputs:
     description: pattern of the tag to look for
   starting-tag:
     required: false
-    default: "v0.0.0"
+    default: ""
     description: default strating tag
   branch:
     required: false
