fix: permissions for helm buildé

--- a/.github/workflows/__helm-build__.yaml
+++ b/.github/workflows/__helm-build__.yaml
@@ -235,10 +235,7 @@ jobs:
     name: ⚓ Helm Chart build
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
+    permissions: write-all
     container:
       image: ${{ inputs.helm-image }}
     steps:
